logistic readjust imbalance

--- a/data nuggets/nuggets.ipynb
+++ b/data nuggets/nuggets.ipynb
@@ -3746,8 +3746,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "id": "f460a3f6-718c-4cac-a01e-83e9f7c93c15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_probs = log.predict_proba(X_test)[:,1]\n",
+    "\n",
+    "y_pred = (y_probs >= 0.561).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "8b16e512-1a2c-486b-b72e-2a54e53e0c3a",
    "metadata": {},
    "outputs": [
     {
@@ -3781,16 +3793,14 @@
     }
    ],
    "source": [
-    "y_pred = log.predict(X_test)\n",
-    "\n",
-    "print(confusion_matrix(y_test, y_pred))\n",
+    "print(confusion_matrix(y_test,y_pred))\n",
     "print(classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b16e512-1a2c-486b-b72e-2a54e53e0c3a",
+   "id": "6ff673ac-ec25-4c5b-8702-87d95bcbbf9b",
    "metadata": {},
    "outputs": [],
    "source": []
