added thought process

--- a/data nuggets/nuggets.ipynb
+++ b/data nuggets/nuggets.ipynb
@@ -217,6 +217,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51b7c25a-9eb8-41bd-bcaf-7948c2eddc71",
+   "metadata": {},
+   "source": [
+    "I wanted to get look at the data first to see what I am working with. Getting the first five datas to just get the feel of it. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "6c6f40e8-79fd-47b7-aa0a-d1ff0cd71109",
@@ -297,6 +305,14 @@
    ],
    "source": [
     "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e5a8a35-e3b5-4367-b23d-fdf27d8929c8",
+   "metadata": {},
+   "source": [
+    "I wanted to also see what columns contain null values and also the data types that are in the dataset. "
    ]
   },
   {
@@ -610,6 +626,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7da73345-1e06-4e3d-9aa9-603fc683bce4",
+   "metadata": {},
+   "source": [
+    "I had dropped the Unnamed: 8 and Unnamed: 15 columns because it seem to not have anything contributed to the data set or have any valueable insight. It also had no values at all in the columns. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "dc96ebc6-7079-40c2-ba1f-7bc392455233",
@@ -801,6 +825,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04fdf365-ca6b-4003-a06a-08a2ae7c8c9b",
+   "metadata": {},
+   "source": [
+    "I wanted to drop the columns that were redundant. It made no sense to keep columns that repeated the same values. I also wanted to take out the 2025 - 2026 season since the season had not started yet when I had this analysis. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "dc2c69aa-3b25-4333-b0cc-c3178e5a5d6c",
@@ -979,6 +1011,14 @@
    ],
    "source": [
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aebf14b7-6b8f-46aa-babd-e45e3d89f0f2",
+   "metadata": {},
+   "source": [
+    "I wanted to reset the index to make the index consistent and in order. "
    ]
   },
   {
@@ -1173,6 +1213,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31094b41-ac76-42fb-a723-816cfc078367",
+   "metadata": {},
+   "source": [
+    "I renamed the columns just in case for the peole that do no understand the abbreviations and make it understandable for anyone to read it. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "902d8451-fe71-405d-a6c4-2f1516a0dd51",
@@ -1217,6 +1265,14 @@
    ],
    "source": [
     "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1c9058b-cb08-4855-9ae9-fbcb06d15a6d",
+   "metadata": {},
+   "source": [
+    "I took a closer look at the data and wanted to drop the coach records and top win share because I thought it did not have any valuble insight about the team in general. I also wanted to see what the null values were. "
    ]
   },
   {
@@ -1375,6 +1431,14 @@
    "source": [
     "playoff_check = data[['Standings', 'Playoff_results']]\n",
     "playoff_check[playoff_check['Playoff_results'].isna()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "992577bf-e8ab-4904-b7ce-9a1ce74f49a0",
+   "metadata": {},
+   "source": [
+    "To me looking at the data playoff results could have null values because the team did not make it to the payoff with the standing results. Instead of assuming that, I isolated the two coulmns to make sure that was the case. "
    ]
   },
   {
@@ -2545,6 +2609,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eabceb1f-9ded-4018-bba1-02d2a6558a3e",
+   "metadata": {},
+   "source": [
+    "When I isolated the two columns I did see that the playoff results were null because the nuggets did not have a good standing results. I did not want to leave the rows empty because that would be bad on training the model. So I dilledd the empty rows with \"Did_not_qualify\". "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "id": "e7b74186-561a-4c55-8956-393aa778489d",
@@ -2579,6 +2651,14 @@
    ],
    "source": [
     "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4a5e9aa-9d30-487f-813d-d51d356854fe",
+   "metadata": {},
+   "source": [
+    "I took a look at the informatin again just to make sure I covered everything with the data types, null values, and columns easy to read. "
    ]
   },
   {
@@ -3075,6 +3155,14 @@
     "print('R^2:', r2_score(y_test, y_pred))\n",
     "print('Coeffficents:', model.coef_)\n",
     "print('Intercepts:', model.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c1e5537-c92b-40a0-a63f-8b1f227729d7",
+   "metadata": {},
+   "source": [
+    "I used Linear Regression to see if it can predicit if the nuggets win based on the features it had to contribute them winning. "
    ]
   },
   {
@@ -3798,12 +3886,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ff673ac-ec25-4c5b-8702-87d95bcbbf9b",
+   "cell_type": "markdown",
+   "id": "51f33951-f031-4910-8447-71189720dfc4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "I used Logisitc Regression to see if can predict the paly off results based on win percentage. I had to change the  playoff results to 0 a"
+   ]
   }
  ],
  "metadata": {
